= ChangeLog for cqfd

* Default archive filename is now named after the project's
  configuration.
* Remove the release config section
* Allow templating the release filename
* Preserve container environment into the build user's shell

== Version 3.0

* Support multiple build flavors
* Support user-specified volume mappings ($CQFD_EXTRA_VOLUMES)

== Version 2.0

* Fix config parser issue on bash >4.1
* Use action verbs in user interface
* Do not have user depend on SSH_AUTH_SOCK

== Version 1.0

* Initial release
* Support for Ubuntu (trusty) build containers
