@@ -1,5 +1,8 @@
 = ChangeLog for cqfd
 
+* Files in an archive are only moved at its root if tar_transform is
+  set.
+* Added support for .tar.gz and .zip archives.
 * Default archive filename is now named after the project's
   configuration.
 * Remove the release config section
